--- a/src/index.css
+++ b/src/index.css
@@ -30,11 +30,8 @@
 }
 
 input,
-select,
-textarea {
+select {
   font-size: 16px;
-  transform: scale(0.75); /* 12 / 16 = 0.75 */
-  transform-origin: left center;
 }
 
 @supports (-webkit-touch-callout: none) {
@@ -58,7 +55,7 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 /* Bottom sheet z-index override */
-.bottom-sheet-backdrop {
+/* .bottom-sheet-backdrop {
   z-index: 999998 !important;
   isolation: isolate;
 }
@@ -67,7 +64,7 @@ input[type='number']::-webkit-outer-spin-button {
   z-index: 999999 !important;
   isolation: isolate;
   position: fixed !important;
-}
+} */
 
 /* Force drei Html overlays below bottom sheets */
 [data-three-html] {
